--- a/4-MNIST/main.ipynb
+++ b/4-MNIST/main.ipynb
@@ -4,34 +4,59 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to c:\\Users\\m.mikowski\\Documents\\light\\tf2pl\\4-MNIST\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "153cb76e46054d3ab4c1765c2d18c44c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/9912422 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "import os\n",
+    "from torch.utils.data import DataLoader, random_split\n",
     "\n",
-    "batch_size = 64\n",
+    "\n",
+    "batch_size = 128\n",
     "\n",
     "\n",
     "transform = transforms.Compose(\n",
-    "    [transforms.ToTensor(),\n",
-    "     transforms.Normalize((0.1307,), (0.3081,))])\n",
+    "    [\n",
+    "    transforms.ToTensor(),\n",
+    "    #transforms.Normalize((0.1307,), (0.3081,))\n",
+    "    ])\n",
     "\n",
-    "trainset = torchvision.datasets.MNIST(os.getcwd(), train=True,\n",
-    "                                        download=True, transform=transform)\n",
-    "train_dataloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size,\n",
-    "                                          shuffle=True)\n",
+    "trainset = torchvision.datasets.MNIST(os.getcwd(), train=True,download=True, transform=transform)\n",
+    "trainset, valset = random_split(trainset, [55000, 5000])\n",
+    "testset = torchvision.datasets.MNIST(os.getcwd(), train=False,download=True, transform=transform)\n",
     "\n",
-    "valset = torchvision.datasets.MNIST(os.getcwd(), train=False,\n",
-    "                                       download=True, transform=transform)\n",
-    "val_dataloader = torch.utils.data.DataLoader(valset, batch_size=batch_size,\n",
-    "                                         shuffle=False)"
+    "train_dataloader = DataLoader(trainset, batch_size=batch_size,shuffle=True)\n",
+    "val_dataloader = DataLoader(valset, batch_size=batch_size,shuffle=True)\n",
+    "test_dataloader = DataLoader(testset, batch_size=batch_size,shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,47 +66,19 @@
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(1, 16, 3)\n",
-    "        self.pool = nn.MaxPool2d(2, 2)\n",
-    "        self.conv2 = nn.Conv2d(16, 32, 3)\n",
-    "        self.fc1 = nn.Linear(32 * 5 * 5, 128)\n",
-    "        self.fc2 = nn.Linear(128, 10)\n",
-    "        #self.fc3 = nn.Linear(84, 10)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.pool(F.relu(self.conv1(x)))\n",
-    "        x = self.pool(F.relu(self.conv2(x)))\n",
-    "        x = torch.flatten(x, 1) # flatten all dimensions except batch\n",
-    "        x = F.relu(self.fc1(x))\n",
-    "        #x = F.relu(self.fc2(x))\n",
-    "        x = self.fc2(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "class Net2(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
     "        self.stack = nn.Sequential(\n",
-    "            nn.Conv2d(1,16,3),\n",
+    "            nn.Conv2d(1,32,3),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(32,64,3),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(2),\n",
-    "            nn.Conv2d(16,32,3),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
+    "            nn.Dropout(0.25),\n",
     "            nn.Flatten(),\n",
-    "            nn.Linear(32*5*5, 128),\n",
+    "            nn.Linear(64*12*12, 128),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.5),\n",
     "            nn.Linear(128,10),\n",
+    "            #nn.Softmax()\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -91,7 +88,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 26, 26])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#How to compute conv layers\n",
+    "layer = nn.Conv2d(in_channels=1, out_channels=32, kernel_size=3)\n",
+    "example = trainset[0][0]\n",
+    "layer(example).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +119,15 @@
     "from torchmetrics import Accuracy\n",
     "\n",
     "class MyLitModel(pl.LightningModule):\n",
-    "    def __init__(self, lr=0.05):\n",
+    "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.save_hyperparameters()\n",
-    "        self.model = Net2()\n",
+    "        self.model = Net()\n",
+    "        self.loss_fn = nn.CrossEntropyLoss()\n",
     "        self.train_accuracy = Accuracy(task=\"multiclass\", num_classes=10)\n",
     "        self.val_accuracy = Accuracy(task=\"multiclass\", num_classes=10)\n",
-    "        self.loss_fn = nn.CrossEntropyLoss()\n",
+    "        self.test_accuracy = Accuracy(task=\"multiclass\", num_classes=10)\n",
+    "        \n",
     "    \n",
     "    def forward(self, x):\n",
     "        return self.model(x)\n",
@@ -127,14 +149,34 @@
     "        acc = self.val_accuracy(logits, y)\n",
     "        self.log(\"val_accuracy\", acc)\n",
     "\n",
+    "    def test_step(self, batch, batch_idx):\n",
+    "        x, y = batch\n",
+    "        logits = self(x)\n",
+    "        loss = self.loss_fn(logits, y)\n",
+    "        self.log(\"test_loss\", loss)\n",
+    "        acc = self.test_accuracy(logits, y)\n",
+    "        self.log(\"test_accuracy\", acc)\n",
+    "\n",
     "    def configure_optimizers(self):\n",
-    "        optimizer = torch.optim.SGD(self.parameters(), lr=self.hparams.lr, momentum=0.9)\n",
+    "        #optimizer = torch.optim.SGD(self.parameters(), lr=self.hparams.lr, momentum=0.9)\n",
+    "        optimizer = torch.optim.Adadelta(self.parameters())\n",
     "        return optimizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning.callbacks import EarlyStopping\n",
+    "\n",
+    "early_stopping_calback = EarlyStopping(monitor=\"train_loss\", min_delta=0.1, mode=\"min\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -145,25 +187,27 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
+      "Missing logger folder: c:\\Users\\m.mikowski\\Documents\\light\\tensor\\4-MNIST\\lightning_logs\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name           | Type               | Params\n",
       "------------------------------------------------------\n",
-      "0 | model          | Net2               | 108 K \n",
-      "1 | train_accuracy | MulticlassAccuracy | 0     \n",
-      "2 | val_accuracy   | MulticlassAccuracy | 0     \n",
-      "3 | loss_fn        | CrossEntropyLoss   | 0     \n",
+      "0 | model          | Net                | 1.2 M \n",
+      "1 | loss_fn        | CrossEntropyLoss   | 0     \n",
+      "2 | train_accuracy | MulticlassAccuracy | 0     \n",
+      "3 | val_accuracy   | MulticlassAccuracy | 0     \n",
+      "4 | test_accuracy  | MulticlassAccuracy | 0     \n",
       "------------------------------------------------------\n",
-      "108 K     Trainable params\n",
+      "1.2 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "108 K     Total params\n",
-      "0.434     Total estimated model params size (MB)\n"
+      "1.2 M     Total params\n",
+      "4.800     Total estimated model params size (MB)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b8dd9edc2f2425d9ce18bdeb36cbfd9",
+       "model_id": "eb68d6eb698f437caa9e10271554d08c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,6 +222,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\m.mikowski\\Anaconda3\\envs\\env1\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:480: PossibleUserWarning: Your `val_dataloader`'s sampler has shuffling enabled, it is strongly recommended that you turn shuffling off for val/test dataloaders.\n",
+      "  rank_zero_warn(\n",
       "c:\\Users\\m.mikowski\\Anaconda3\\envs\\env1\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:432: PossibleUserWarning: The dataloader, val_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
       "  rank_zero_warn(\n",
       "c:\\Users\\m.mikowski\\Anaconda3\\envs\\env1\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:432: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
@@ -187,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3574bfa0d984452da74993dadbb748b0",
+       "model_id": "0b03389bf3e54c4fb2944af1adb283bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2536316a9cd45a088e43f5d68623cba",
+       "model_id": "4a0035de04cb4f81bcd3c5387d9b7aa5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3132f39e3a04450ac1bad9c6a5f9761",
+       "model_id": "5fa1009aaed54236a95f5925d9619ee1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51e75018da27442eb15c7fcc958004f9",
+       "model_id": "ab4b26960d764e2ca758f6d0a8355510",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,20 +287,42 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=3` reached.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b08a77ecfb074a949975e29801ed66b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7da8ccbddd14158aaba1c9cd8e083ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "model = MyLitModel(lr=0.001)\n",
+    "model = MyLitModel()\n",
     "\n",
     "trainer = pl.Trainer(\n",
-    "    max_epochs=3,\n",
+    "    max_epochs=12,\n",
     "    accelerator=\"auto\",\n",
-    "    devices=\"auto\"\n",
+    "    devices=\"auto\",\n",
+    "    callbacks=early_stopping_calback\n",
     ")\n",
     "\n",
     "trainer.fit(model, train_dataloader, val_dataloader)"
@@ -262,27 +330,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "c:\\Users\\m.mikowski\\Anaconda3\\envs\\env1\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:432: PossibleUserWarning: The dataloader, val_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\m.mikowski\\Anaconda3\\envs\\env1\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:432: PossibleUserWarning: The dataloader, test_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 16 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
       "  rank_zero_warn(\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7536376af14455ea4bdc33357efb54a",
+       "model_id": "f903d0017aae4a0980602c9d74af4261",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
+       "Testing: 0it [00:00, ?it/s]"
       ]
      },
      "metadata": {},
@@ -292,19 +366,19 @@
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
-       "┃<span style=\"font-weight: bold\">      Validate metric      </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
+       "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">       val_accuracy        </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.9641000032424927     </span>│\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">         val_loss          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.11389957368373871    </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">       test_accuracy       </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.9897000193595886     </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.03436831757426262    </span>│\n",
        "└───────────────────────────┴───────────────────────────┘\n",
        "</pre>\n"
       ],
       "text/plain": [
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
-       "┃\u001b[1m \u001b[0m\u001b[1m     Validate metric     \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│\u001b[36m \u001b[0m\u001b[36m      val_accuracy       \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.9641000032424927    \u001b[0m\u001b[35m \u001b[0m│\n",
-       "│\u001b[36m \u001b[0m\u001b[36m        val_loss         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.11389957368373871   \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m      test_accuracy      \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.9897000193595886    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m        test_loss        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.03436831757426262   \u001b[0m\u001b[35m \u001b[0m│\n",
        "└───────────────────────────┴───────────────────────────┘\n"
       ]
      },
@@ -314,16 +388,16 @@
     {
      "data": {
       "text/plain": [
-       "[{'val_loss': 0.11389957368373871, 'val_accuracy': 0.9641000032424927}]"
+       "[{'test_loss': 0.03436831757426262, 'test_accuracy': 0.9897000193595886}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer.validate(model, val_dataloader)"
+    "trainer.test(model, test_dataloader)"
    ]
   }
  ],
