--- a/4-MNIST/main.ipynb
+++ b/4-MNIST/main.ipynb
@@ -2,38 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to c:\\Users\\m.mikowski\\Documents\\light\\tf2pl\\4-MNIST\\MNIST\\raw\\train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "153cb76e46054d3ab4c1765c2d18c44c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/9912422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "import os\n",
     "from torch.utils.data import DataLoader, random_split\n",
+    "from torchvision.datasets import MNIST\n",
+    "import pytorch_lightning as pl\n",
     "\n",
     "\n",
     "batch_size = 128\n",
@@ -56,7 +35,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MNISTDataModule(pl.LightningDataModule):\n",
+    "    def __init__(self, batch_size=128):\n",
+    "        super().__init__()\n",
+    "        #self.data_dir = data_dir\n",
+    "        self.batch_size = batch_size\n",
+    "\n",
+    "    def prepare_data(self):\n",
+    "        #download\n",
+    "        MNIST(os.getcwd(), train=True, download=False)\n",
+    "        MNIST(os.getcwd(), train=False, download=False)\n",
+    "\n",
+    "    def setup(self, stage: str):\n",
+    "        self.mnist_test = MNIST(os.getcwd(), train=False, transform=transforms.ToTensor())\n",
+    "        self.mnist_predict = MNIST(os.getcwd(), train=False, transform=transforms.ToTensor())\n",
+    "        mnist_full = MNIST(os.getcwd(), train=True, transform=transforms.ToTensor())\n",
+    "        self.mnist_train, self.mnist_val = random_split(mnist_full, [55000, 5000])\n",
+    "\n",
+    "    def train_dataloader(self):\n",
+    "        return DataLoader(self.mnist_train, batch_size=self.batch_size)\n",
+    "    \n",
+    "    def val_dataloader(self):\n",
+    "        return DataLoader(self.mnist_val, batch_size=self.batch_size)\n",
+    "    \n",
+    "    def test_dataloader(self):\n",
+    "        return DataLoader(self.mnist_test, batch_size=self.batch_size)\n",
+    "    \n",
+    "    def predict_dataloader(self):\n",
+    "        return DataLoader(self.mnist_predict, batch_size=self.batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +112,7 @@
        "torch.Size([32, 26, 26])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +202,6 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "Missing logger folder: c:\\Users\\m.mikowski\\Documents\\light\\tensor\\4-MNIST\\lightning_logs\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name           | Type               | Params\n",
@@ -207,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb68d6eb698f437caa9e10271554d08c",
+       "model_id": "53ebcefbd31645269182197de33b240e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b03389bf3e54c4fb2944af1adb283bf",
+       "model_id": "20be6a36f7d745188908b3fb36f985d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a0035de04cb4f81bcd3c5387d9b7aa5",
+       "model_id": "48c7da8f903246e1a5242ac30b2a3e4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fa1009aaed54236a95f5925d9619ee1",
+       "model_id": "5e7cb5c2aede4c638e397333ae2e4d95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,7 +289,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab4b26960d764e2ca758f6d0a8355510",
+       "model_id": "498d204a65294f6aa81f7e6e260ee6ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b08a77ecfb074a949975e29801ed66b1",
+       "model_id": "58456249356e4a6aa6dfc47b45550c1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7da8ccbddd14158aaba1c9cd8e083ef",
+       "model_id": "2b268ad8f298492fac8a5958346ef6e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,6 +331,7 @@
    ],
    "source": [
     "model = MyLitModel()\n",
+    "dm = MNISTDataModule()\n",
     "\n",
     "trainer = pl.Trainer(\n",
     "    max_epochs=12,\n",
@@ -330,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f903d0017aae4a0980602c9d74af4261",
+       "model_id": "55acb67c424f41f0925bf46e6e4a3231",
        "version_major": 2,
        "version_minor": 0
       },
@@ -368,8 +383,8 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\">        Test metric        </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">       test_accuracy       </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.9897000193595886     </span>│\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.03436831757426262    </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">       test_accuracy       </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     0.989300012588501     </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.03228896111249924    </span>│\n",
        "└───────────────────────────┴───────────────────────────┘\n",
        "</pre>\n"
       ],
@@ -377,8 +392,8 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1m       Test metric       \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│\u001b[36m \u001b[0m\u001b[36m      test_accuracy      \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.9897000193595886    \u001b[0m\u001b[35m \u001b[0m│\n",
-       "│\u001b[36m \u001b[0m\u001b[36m        test_loss        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.03436831757426262   \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m      test_accuracy      \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    0.989300012588501    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m        test_loss        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.03228896111249924   \u001b[0m\u001b[35m \u001b[0m│\n",
        "└───────────────────────────┴───────────────────────────┘\n"
       ]
      },
@@ -388,7 +403,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'test_loss': 0.03436831757426262, 'test_accuracy': 0.9897000193595886}]"
+       "[{'test_loss': 0.03228896111249924, 'test_accuracy': 0.989300012588501}]"
       ]
      },
      "execution_count": 7,
